--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <title>EPITA 2023 - SIGL</title>
     <style>
         body {
-            background: #000000; 
+            background: #000000;
         }
 
         #container {
-            margin : auto; 
+            margin : auto;
             border: 1px solid white;
             background: #000000;
         }
-        
+
         #player1 {
-                margin : auto; 
+                margin : auto;
                 text-align: center;
         }
 
@@ -37,6 +37,7 @@
 <script src="js/OrbitControls.js"></script>
 <script src="js/THREEx.KeyboardState.js"></script>
 <script src="game/player.js"></script>
+<script src="game/enemy.js"></script>
 <script src="game/graphic.js"></script>
 <script src="game/physic.js"></script>
 <script src="game/shoot.js"></script>
